[package]
name = "fnv"
version = "1.0.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Fowler–Noll–Vo hash function"
license = "Apache-2.0 / MIT"
readme = "README.md"
repository = "https://github.com/servo/rust-fnv"
documentation = "https://doc.servo.org/fnv/"

[lib]
name = "fnv"
path = "lib.rs"
doctest = false

[features]
serde-serialization = ["serde", "serde_macros"]

[dependencies]
serde = {version = ">=0.6, <0.8", optional = true}
serde_macros = {version = ">=0.6, <0.8", optional = true}
